(final fixes) updated Bridge and NPC Module